# aioice

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
.travis/: install  script
aioice/: __init__.py  candidate.py  compat.py  exceptions.py  ice.py  stun.py  turn.py  utils.py
docs/: api.rst  changelog.rst  conf.py  index.rst
examples/: full-trickle-ice-client.py  ice-client.py  signaling-server.py
src/aioice/: __init__.py  about.py  candidate.py  compat.py  exceptions.py  ice.py  mdns.py  socks5.py  stun.py  turn.py  utils.py
stubs/dns/: flags.py  message.py  name.py  rdata.py  rdataclass.py  rdataset.py  rdatatype.py  rrset.py  zone.py
tests/: echoserver.py  stunserver.py  test_candidate.py  test_exceptions.py  test_ice.py  test_ice_trickle.py  test_mdns.py  test_stun.py  test_turn.py  turnserver.crt  turnserver.key  turnserver.py  utils.py
