[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aioice"
description = "An implementation of Interactive Connectivity Establishment (RFC 5245)"
readme = "README.rst"
requires-python = ">=3.7"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Jeremy Lainé", email = "jeremy.laine@m4x.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "dnspython>=2.0.0",
    "ifaddr>=0.2.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/aiortc/aioice"
documentation = "https://aioice.readthedocs.io/"

[tool.setuptools.dynamic]
version = {attr = "aioice.__version__"}
