[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aioice"
description = "An implementation of Interactive Connectivity Establishment (RFC 5245)"
readme = "README.rst"
requires-python = ">=3.7"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Jeremy Lainé", email = "jeremy.laine@m4x.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "dnspython>=2.0.0",
    "ifaddr>=0.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.2.2",
]

[project.urls]
homepage = "https://github.com/aiortc/aioice"
documentation = "https://aioice.readthedocs.io/"

[tool.coverage.run]
source = ["aioice"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
mypy_path = "stubs"
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "W",  # pycodestyle
    "I",  # isort
]

[tool.setuptools.dynamic]
version = {attr = "aioice.__version__"}
