[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aioice"
description = "An implementation of Interactive Connectivity Establishment (RFC 5245)"
readme = "README.rst"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    { name = "Jeremy Lainé", email = "jeremy.laine@m4x.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "dnspython>=2.0.0",
    "ifaddr>=0.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.2.2",
    "mypy",
    "pyopenssl",
    "ruff",
    "websockets",
]

[project.urls]
Homepage = "https://github.com/aiortc/aioice"
Changelog = "https://aioice.readthedocs.io/en/stable/changelog.html"
Documentation = "https://aioice.readthedocs.io/"

[tool.coverage.run]
source = ["aioice"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
mypy_path = "stubs"
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "W",  # pycodestyle
    "I",  # isort
    "T20",  # flake8-print
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["T201"]

[tool.setuptools.dynamic]
version = {attr = "aioice.__version__"}
